# correct-horse

./: .gitattributes  Makefile.am  README.md  configure.ac  correct-horse.desktop  default.nix  list-to-header.sh  meson.build  pkgs.nix  shell.nix
src/: dictionary.h  dictionary.txt  main-gtk.c  main.c  random.c  random.h
